--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <div><a href="">查看演示</a></div>
+  <div><a href="./demo/index.html">查看演示</a></div>
 </body>
 </html>
